swagger data update
