# handlers/genresHandlers.go
@@ -20,14 +20,17 @@ func NewGenresHandler(
 	}
 }
 
-// FindAll godoc
-// @Summary Get all genres
-// @Description Retrieves a list of all available genres
+// FindById godoc
+// @Summary      Find genre by id
 // @Tags genres
-// @Produce json
-// @Success 200 {array} models.Genre
-// @Failure 500 {object} models.ApiError
-// @Router /genres [get]
+// @Accept       json
+// @Produce      json
+// @Param id path int true "Genre ID"
+// @Success      200  {object} models.Genre "OK"
+// @Failure   	 400  {object} models.ApiError "Validation error"
+// @Failure   	 500  {object} models.ApiError
+// @Router       /genres/{id} [get]
+// @Security Bearer
 func (h *GenresHandler) FindAll(c *gin.Context) {
 	genres, err := h.genresRepo.FindAll(c)
 	if err != nil {
@@ -37,16 +40,16 @@ func (h *GenresHandler) FindAll(c *gin.Context) {
 	c.JSON(http.StatusOK, genres)
 }
 
-// FindById godoc
-// @Summary Get a genre by ID
-// @Description Retrieves a single genre by its ID
+// FindAll godoc
 // @Tags genres
-// @Produce json
-// @Param id path int true "Genre ID"
-// @Success 200 {object} models.Genre
-// @Failure 400 {object} models.ApiError "Invalid genre id"
-// @Failure 404 {object} models.ApiError "Genre not found"
-// @Router /genres/{id} [get]
+// @Summary      Get genres list
+// @Accept       json
+// @Produce      json
+// @Success      200  {array} models.Genre "OK"
+// @Failure   	 400  {object} models.ApiError "Validation error"
+// @Failure   	 500  {object} models.ApiError
+// @Router       /genres [get]
+// @Security Bearer
 func (h *GenresHandler) FindById(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -66,16 +69,16 @@ func (h *GenresHandler) FindById(c *gin.Context) {
 }
 
 // Create godoc
-// @Summary Create a new genre
-// @Description Adds a new genre to the database
+// @Summary      Create genre
 // @Tags genres
-// @Accept json
-// @Produce json
-// @Param genre body models.Genre true "Genre data"
-// @Success 200 {object} map[string]int "Created genre ID"
-// @Failure 400 {object} models.ApiError "Couldn't bind json"
-// @Failure 404 {object} models.ApiError
-// @Router /genres [post]
+// @Accept       json
+// @Produce      json
+// @Param request body models.Genre true "Genre model"
+// @Success      200  {object} object{id=int}  "OK"
+// @Failure   	 400  {object} models.ApiError "Validation error"
+// @Failure   	 500  {object} models.ApiError
+// @Router       /genres [post]
+// @Security Bearer
 func (h *GenresHandler) Create(c *gin.Context) {
 	var createGenre models.Genre
 
@@ -97,17 +100,17 @@ func (h *GenresHandler) Create(c *gin.Context) {
 }
 
 // Update godoc
-// @Summary Update a genre
-// @Description Updates an existing genre by ID
+// @Summary      Update genre
 // @Tags genres
-// @Accept json
-// @Produce json
-// @Param id path int true "Genre ID"
-// @Param genre body models.Genre true "Updated genre data"
-// @Success 200
-// @Failure 400 {object} models.ApiError "Invalid genre id or couldn't bind json"
-// @Failure 404 {object} models.ApiError "Genre not found"
-// @Router /genres/{id} [put]
+// @Accept       json
+// @Produce      json
+// @Param id path int true "Genre id"
+// @Param request body models.Genre true "Genre model"
+// @Success      200
+// @Failure   	 400  {object} models.ApiError "Validation error"
+// @Failure   	 500  {object} models.ApiError
+// @Router       /genres/{id} [put]
+// @Security Bearer
 func (h *GenresHandler) Update(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -141,14 +144,16 @@ func (h *GenresHandler) Update(c *gin.Context) {
 }
 
 // Delete godoc
-// @Summary Delete a genre
-// @Description Deletes a genre by ID
+// @Summary      Delete genre
 // @Tags genres
-// @Param id path int true "Genre ID"
-// @Success 200
-// @Failure 400 {object} models.ApiError "Invalid genre id"
-// @Failure 404 {object} models.ApiError "Genre not found"
-// @Router /genres/{id} [delete]
+// @Accept       json
+// @Produce      json
+// @Param id path int true "Genre id"
+// @Success      200
+// @Failure   	 400  {object} models.ApiError "Validation error"
+// @Failure   	 500  {object} models.ApiError
+// @Router       /genres/{id} [delete]
+// @Security Bearer
 func (h *GenresHandler) Delete(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
